 [build-system]
requires = [
    "setuptools>=68",
    "wheel",
    "cython>=3.0",
    "numpy>=1.26,<3",
]
build-backend = "setuptools.build_meta"

[project]
name = "madmom"
version = "0.17.dev0"
description = "Python audio signal processing library"
readme = "README.rst"
license = {file = "LICENSE"}
requires-python = ">=3.11"
authors = [
    {name = "Department of Computational Perception, Johannes Kepler University, Linz, Austria and Austrian Research Institute for Artificial Intelligence (OFAI), Vienna, Austria", email = "madmom-users@googlegroups.com"},
]
keywords = ["audio", "music", "signal processing", "MIR", "music information retrieval"]
classifiers = [
    "Development Status :: 3 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Environment :: Console",
    "License :: OSI Approved :: BSD License",
    "License :: Free for non-commercial use",
    "Topic :: Multimedia :: Sound/Audio :: Analysis",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.26,<3",
    "scipy>=1.11,<2",
    "mido>=1.3,<2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "build",
    "twine",
    "black",
    "pre-commit",
]
docs = [
    "sphinx",
    "numpydoc",
]
audio = [
    "pyaudio",
    "pyfftw",
]

[project.urls]
Homepage = "https://github.com/CPJKU/madmom"
Documentation = "http://madmom.readthedocs.org"
Repository = "https://github.com/CPJKU/madmom.git"
Issues = "https://github.com/CPJKU/madmom/issues"

[tool.setuptools]
packages = ["madmom", "madmom.audio", "madmom.evaluation", "madmom.features", "madmom.io", "madmom.ml", "madmom.ml.nn", "madmom.models", "madmom.utils"]

[tool.setuptools.package-data]
madmom = [
    "models/LICENSE",
    "models/README.rst",
    "models/beats/201[56]/*",
    "models/chords/*/*",
    "models/chroma/*/*",
    "models/downbeats/*/*",
    "models/key/2018/*",
    "models/notes/*/*",
    "models/onsets/*/*",
    "models/patterns/*/*",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]
